--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,6 @@
 
 <head>
 	<meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
-	<link rel="stylesheet" type="text/css" href="style.css" media="screen" />
 	<title>Arcanoid Game</title>
 	<%= stylesheet_link_tag :all %>
   <%= javascript_include_tag :defaults %>
@@ -41,7 +40,8 @@
 
 	<div id="main_wrapper">
 		<div id="main">
-		  <%= flash[:alert] %>
+		  <p class="notice"><%= notice %></p>
+      <p class="alert"><%= alert %></p>
 		  <%= yield %>
 		</div>
 
