--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,7 +26,7 @@
 			</ul>
     <div class="user">
       <% if user_signed_in? %>
-        <span class="user_id"><%=  current_user.id %></span>
+        <span id="user_id"><%=  current_user.id %></span>
         <%= link_to current_user.username, user_path(current_user) %> | <%= link_to "Logout", destroy_user_session_path %>
       <% else %>
         <%= link_to "Login", new_user_session_path %> or <%= link_to "Registration", new_user_registration_path %>
